--- a/package.json
+++ b/package.json
@@ -27,5 +27,11 @@
   "homepage": "https://github.com/SKorchinskiy/ecommerce-api#readme",
   "devDependencies": {
     "nodemon": "^3.0.1"
+  },
+  "dependencies": {
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
+    "helmet": "^7.0.0",
+    "morgan": "^1.10.0"
   }
 }
