--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "helmet": "^7.0.0",
     "joi": "^17.9.2",
     "jsonwebtoken": "^9.0.1",
+    "knex": "^2.5.1",
     "morgan": "^1.10.0",
     "mysql": "^2.18.1"
   }
